<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center|end"
        android:onClick="btnClick_1"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#FFFFFF"
        android:gravity="center|end"
        android:hint="@string/_0"
        android:maxLength="14"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="50sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#673AB7"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_log"
            android:text="@string/log"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_ln"
            android:text="@string/ln"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_pow"
            android:text="@string/pow"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_sqrt"
            android:text="@string/sqrt"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_factorial"
            android:text="@string/factorial"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#673AB7"
        android:orientation="horizontal"
        android:weightSum="5">


        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_sin"
            android:text="@string/sin"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_cos"
            android:text="@string/cos"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_tan"
            android:text="@string/tan"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_pi"
            android:text="@string/pi"
            android:textAllCaps="false"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick_e"
            android:text="@string/e"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorTextonSecondary"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_1"
            android:text="@string/_1"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_2"
            android:text="@string/_2"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_3"
            android:text="@string/_3"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="onClick_plus"
            android:text="@string/plus"
            android:textColor="#673AB7"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:contentDescription="@string/todo"
            android:onClick="onClick_erase"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_4"
            android:text="@string/_4"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_5"
            android:text="@string/_5"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="btnClick_6"
            android:text="@string/_6"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="onClick_minus"
            android:text="@string/minus"
            android:textColor="#673AB7"
            android:textSize="30sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:onClick="onClick_clear"
            android:text="@string/c"
            android:textColor="@color/colorTextonPrimary"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">


                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="btnClick_7"
                    android:text="@string/_7"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="btnClick_8"
                    android:text="@string/_8"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="btnClick_9"
                    android:text="@string/_9"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="onClick_multiply"
                    android:text="@string/multiplication"
                    android:textColor="#673AB7"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

<!--                <View-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@color/colorPrimaryDark" />-->

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="btnClick_0"
                    android:text="@string/_0"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="onClick_comma"
                    android:text="@string/comma"
                    android:textColor="@color/colorTextonPrimary"
                    android:textSize="30sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="onClick_exp"
                    android:text="@string/exp"
                    android:textColor="#673AB7"
                    android:textSize="20sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:onClick="onClick_divide"
                    android:text="@string/division"
                    android:textColor="#673AB7"
                    android:textSize="30sp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="onClick_equal"
                android:text="@string/equal"
                android:textColor="@color/colorTextonPrimary"
                android:textSize="30sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>